# localcomm-app

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto/: localcomm.proto
src-tauri/scripts/: generate-root-ca.sh
src-tauri/src/: cli.rs  daemon.rs  lib.rs  main.rs
src-tauri/src/client/: mod.rs
src-tauri/src/core/: cert_gen.rs  device.rs  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/service/: mod.rs
src-tauri/src/websocket/: mod.rs  payload.rs
