[package]
name = "localcomm-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localcomm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "*"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
mdns-sd = "0.19.1"
local-ip-address = "0.6.12"
whoami = "2.1.2"
slugify = "0.1.0"
enigo = "0.6.1"
directories = "6.0.0"
indicatif = "0.18.4"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = "0.8.6"
jni = "0.22.4"
