[package]
name = "localcomm-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localcomm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "localcomm-server"
path = "src/daemon.rs"

[[bin]]
name = "localcomm-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "*"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
mdns-sd = "0.19.1"
local-ip-address = "0.6.12"
whoami = "2.1.2"
slugify = "0.1.0"
enigo = "0.6.1"
directories = "6.0.0"
indicatif = "0.18.4"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
sqlx = "0.8.6"
jni = "0.22.4"
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
tauri-plugin-safe-area-insets-css = "0.2.0"
rustls = { version = "0.24.0-dev.0", features = ["log"] }
tonic-tls = { version = "0.7.1", default-features = false, features = ["rustls"] }
tokio-rustls = "0.26.4"
openssh = "0.11.6"
openssl = "0.10.79"
rcgen = { version = "0.14.7", features = ["x509-parser", "pem"] }
time = "0.3.47"
